attempting to fix style bug on IOS p2

--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -42,7 +42,7 @@
       font-size: 3rem;
     }
     @include respond(phone-xs) {
-      font-size: 2.5rem;
+      font-size: 2rem;
     }
   }
 
